test.yaml

apiVersion: v1
kind: Pod
metadata:
  name: nginx-harbor
  namespace: default
spec:
  containers:
  - name: nginx
    image: harbor-devops.pcdacs.local/acs-test/nginx:latest
  imagePullSecrets:
  - name: harborpullsecret
